# mondrian

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  mondrian.toml
.config/: config.schema.json  mondrian.json
assets/configs/: mondrian.log.yml  mondrian.schema.json  mondrian.toml  mondrian_nofile.log.yml
assets/example_config/: mondrian.log.yml  mondrian.toml
src/: app_main.rs  main.rs  main_nc.rs
src/app/: app_event.rs  app_lock.rs  assets.rs  cli_args.rs  globals.rs  input_binder.rs  mod.rs  mondrian_app.rs  mondrian_app_event.rs  mondrian_command.rs  mondrian_message.rs  tiles_manager.rs  win32_event.rs
src/app/area_tree/: leaf.rs  node.rs  tree.rs
src/app/area_tree/layout_strategy/: golden_ratio.rs  mod.rs  mono_axis.rs  squared.rs  two_step.rs
src/app/config/: app_configs.rs  cli_args.rs  ext_configs.rs  win_matcher.rs
src/app/config/filters/: window_filter.rs  window_filter_type.rs  window_match_filter.rs
src/app/configs/: advanced.rs  core.rs  deserializers.rs  floating.rs  general.rs  layout.rs  mod.rs  modules.rs  monitors.rs  rules.rs  utils.rs
src/app/structs/: area.rs  direction.rs  info_entry.rs  monitors_layout.rs  orientation.rs  paddings.rs  point.rs  win_matcher.rs
src/app/structs/area_tree/: leaf.rs  node.rs  tree.rs
src/app/structs/area_tree/layout/: golden_ration_layout.rs  layout_strategy.rs  mono_axis_layout.rs
src/app/structs/area_tree/layout_strategy/: golden_ratio.rs  mod.rs  mono_axis.rs  squared.rs  two_step.rs
src/app/tiles_manager/: config.rs  container.rs  containers_manager.rs  managed_monitor.rs  managed_window.rs  manager.rs  monitor_layout.rs  tm_command.rs  window_animation_player.rs  window_animator.rs
src/app/win_events_handlers/: maximize_event_handler.rs  minimize_event_handler.rs  open_event_handler.rs  position_event_handler.rs
src/modules/: mod.rs  module.rs
src/modules/core/: config.rs  module.rs
src/modules/core/lib/: containers.rs  display_change_detector.rs  monitor_layout.rs  tm.rs  tm_command.rs  tm_configs.rs  window_animation_player.rs
src/modules/events_monitor/: configs.rs  module.rs
src/modules/events_monitor/lib/: display_change_detector.rs  filter.rs  focus_event_handler.rs  maximize_event_handler.rs  minimize_event_handler.rs  open_event_handler.rs  position_event_handler.rs  system_events_detector.rs
src/modules/file_watcher/: module.rs
src/modules/healthcheck/: module.rs
src/modules/keybindings/: configs.rs  module.rs
src/modules/logger/: module.rs
src/modules/overlay/: configs.rs  module.rs
src/modules/overlay/lib/: color.rs  focus_event_handler.rs  utils.rs  window_overlay.rs
src/modules/overlays/: configs.rs  module.rs
src/modules/overlays/lib/: color.rs  mod.rs  overlay.rs  overlay_manager.rs  overlays_event_handler.rs  utils.rs
src/modules/tiles_manager/: configs.rs  module.rs
src/modules/tiles_manager/lib/: containers.rs  tm.rs  tm_command.rs  tm_configs.rs  utils.rs  window_animation_player.rs
src/modules/tray/: module.rs
src/win32/: mod.rs  win_event_loop.rs  win_events_manager.rs
src/win32/api/: accessibility.rs  cursor.rs  gdiplus.rs  key.rs  misc.rs  monitor.rs  session.rs  window.rs
src/win32/callbacks/: enum_monitors.rs  enum_windows.rs  win_event_hook.rs
src/win32/window/: ghost_window.rs  window_obj.rs  window_ref.rs  window_snapshot.rs
src/win32utils/: win_event_loop.rs  win_events_manager.rs
src/win32utils/api/: cursor.rs  key.rs  monitor.rs  window.rs
src/win32utils/api/callbacks/: enum_windows.rs  win_event_hook.rs
src/win32utils/window/: window_obj.rs  window_ref.rs  window_snapshot.rs
(+25 files in other folders)
