[package]
name = "mondrian"
version = "1.0.0"
edition = "2021"

[dependencies]
inputbot = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
lazy_static = "1.4"
log = "0.4.20"
toml = "0.8.14"
regex = "1.3.9"
log4rs = "1.3.0"
dirs = "5.0.1"
clap = { version = "4.1.6", features = ["derive", "string"] }
notify-rust = "4"
tray-icon = "0.14.3"
open = "5.1.4"
enum_dispatch = "0.3.13"
widestring = "1.1.0"
tokio = { version = "1.26.0", features = ["full"] }

[dependencies.windows]
version = "0.57"
features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    'Win32_UI_Input_KeyboardAndMouse',
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_System_Console",
    "Win32_Graphics_Dwm",
]

[build-dependencies]
winresource = "0.1.17"
