[package]
name = "mondrian"
authors = ["Pasquale Policastro"]
description = "A tiling window manager for Windows 11"
license = "GPL-3.0"
version = "0.9.0"
edition = "2021"
default-run = "mondrian"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4.20"
toml = "0.8.14"
regex = "1.3.9"
dirs = "5.0.1"
clap = { version = "4.1.6", features = ["derive", "string"] }
tray-icon = "0.19.1"
open = "5.1.4"
enum_dispatch = "0.3.13"
widestring = "1.1.0"
log-panics = "2.1.0"
inputbot = { git = "https://github.com/obv-mikhail/InputBot", rev = "71cd597" }
lazy_static = "1.5.0"
winvd = "0.0.48"
notify-debouncer-mini = "0.6.0"
ico = "0.4.0"
rust-embed = { version = "8.5.0", features = ["include-exclude"] }
chrono = "0.4.40"

[dependencies.log4rs]
version = "1.3.0"
features = [
    "console_appender",
    "rolling_file_appender",
    "compound_policy",
    "size_trigger",
    "fixed_window_roller",
    "gzip",
]

[dependencies.notify]
version = "8.0.0"
features = []

[dependencies.windows]
version = "0.57"
features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    'Win32_UI_Input_KeyboardAndMouse',
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_System_Console",
    "Win32_Graphics_Dwm",
    "Win32_UI_HiDpi",
    "Win32_System_RemoteDesktop",
]


[build-dependencies]
winresource = "0.1.17"


[features]
default = []
noconsole = []
